# warporacer

./: .gitignore  main.py  pyproject.toml
PPO/: PPO.py  agent.py  main.py
SAC/: agent.py  config.py  main.py  map_processing.py  racing_env.py  sac.py
logs/: events.out.tfevents.1776670859.Alistairs-MacBook-Pro.local.17907.0  events.out.tfevents.1776671346.Alistairs-MacBook-Pro.local.17943.0  events.out.tfevents.1776671627.Alistairs-MacBook-Pro.local.17981.0  events.out.tfevents.1776673531.Alistairs-MacBook-Pro.local.18173.0  events.out.tfevents.1776673662.Alistairs-MacBook-Pro.local.18223.0  events.out.tfevents.1776674746.Alistairs-MacBook-Pro.local.18285.0  events.out.tfevents.1776675055.Alistairs-MacBook-Pro.local.18326.0  events.out.tfevents.1776675617.Alistairs-MacBook-Pro.local.18377.0  model_0.pt
maps/: ppo_params.npz
